<resources>
    <string name="app_name">Med-Manager</string>
    <string name="title_activity_medication">Medication Information</string>
    <string name="title_activity_user_profile">User Profile</string>
    <string name="done">Done</string>
    <string name="medication_name">Name of Medication</string>
    <string name="medication_description">Description</string>
    <string name="new_medication">Create New Medication</string>
    <string name="frequency">Frequency</string>
    <string name="frequency_type">Frequency Type</string>
    <string name="preferred_time">Preferred Time Per Day</string>
    <string name="choose_time">Choose Time…</string>
    <string name="select_period">Select Period</string>
    <string name="web_client_id">633481090758-ac75rmn05ct6b53uurnl5fmigpe57roe.apps.googleusercontent.com</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="user_image">User Image</string>
    <string name="start_time">Start Time</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="search_hint">Search Medications</string>
    <string name="no_medication_at_this_time">No Medication at this time</string>
    <string name="medication_name_input">Medication Name Input</string>
    <string name="medication_description_input">Medication Description Input</string>
    <string name="text_details">Details</string>
    <string name="ok">Okay</string>
    <string name="icon_text">Medication Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="allergies">Allergies</string>

</resources>
