<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.afolayan.med_manager.NewMedicationActivity">


    <include layout="@layout/general_toolbar" />

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:orientation="vertical"
       android:padding="@dimen/dimens_10">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/medication_name_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/medication_name"
            app:hintEnabled="true">


            <EditText
                android:id="@+id/et_medication_name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:padding="@dimen/dimens_10"
                android:textAlignment="textStart"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="15sp"
                android:inputType="text"
                android:theme="@style/EditTextTheme" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/description_Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="@color/colorPrimary"
            android:hint="@string/medication_description"
            app:hintEnabled="true">


            <EditText
                android:id="@+id/et_medication_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:padding="@dimen/dimens_10"
                android:textAlignment="textStart"
                android:gravity="start"
                android:lines="5"
                android:textColor="@color/black"
                android:textColorHint="@color/light_gray"
                android:textSize="15sp"
                android:inputType="textMultiLine"
                android:theme="@style/EditTextTheme" />

        </android.support.design.widget.TextInputLayout>

        <LinearLayout
           android:weightSum="1"
           android:orientation="horizontal"
            android:baselineAligned="false"
            android:layout_marginTop="@dimen/dimens_10"
           android:layout_width="match_parent"
           android:layout_height="wrap_content">

           <LinearLayout
               android:orientation="vertical"
               android:layout_weight="0.5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:textColor="@color/colorPrimary"
                   android:text="@string/frequency"/>
               <Spinner
                   android:id="@+id/spinner_frequency"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:spinnerMode="dialog"
                   android:prompt="@string/frequency_type"/>
           </LinearLayout>

           <LinearLayout
               android:orientation="vertical"
               android:layout_weight="0.5"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:textSize="14sp"
                   android:textColor="@color/colorPrimary"
                   android:text="@string/preferred_time"/>
               <Button
                   android:id="@+id/btn_choose_time"
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:background="@color/white"
                   android:text="@string/choose_time"/>
           </LinearLayout>

        </LinearLayout>
       <LinearLayout
           android:orientation="vertical"
           android:layout_marginTop="@dimen/dimens_10"
           android:layout_marginStart="@dimen/dimens_10"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">

           <TextView
               android:id="@+id/tv_duration_text"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:textSize="14sp"
               android:textColor="@color/colorPrimary"
               android:text="@string/duration"/>
           <Button
               android:id="@+id/btn_select_period"
               android:layout_marginTop="@dimen/dimens_10"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/select_period"
               android:background="@color/white"/>
       </LinearLayout>

   </LinearLayout>

</LinearLayout>
